--- a/series.conf
+++ b/series.conf
@@ -56399,6 +56399,7 @@
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-clk-krait-unlock-spin-after-mux-completion.patch
 	patches.suse/clk-qcom-ipq8074-fix-NSS-core-PLL-s.patch
+	patches.suse/clk-qcom-ipq8074-SW-workaround-for-UBI32-PLL-lock.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
