--- a/series.conf
+++ b/series.conf
@@ -56402,6 +56402,7 @@
 	patches.suse/clk-qcom-ipq8074-SW-workaround-for-UBI32-PLL-lock.patch
 	patches.suse/clk-qcom-ipq8074-fix-NSS-port-frequency-tables.patch
 	patches.suse/clk-qcom-ipq8074-set-BRANCH_HALT_DELAY-flag-for-UBI-.patch
+	patches.suse/clk-qcom-camcc-sdm845-Fix-topology-around-titan_top-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
