--- a/series.conf
+++ b/series.conf
@@ -56377,6 +56377,7 @@
 	patches.suse/iio-adc-ad7768-1-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ad7887-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-hi8435-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-ltc2497-Fix-alignment-for-DMA-safety.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
