--- a/series.conf
+++ b/series.conf
@@ -56373,6 +56373,7 @@
 	patches.suse/iio-adc-ad7266-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ad7298-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ad7476-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-ad7766-Fix-alignment-for-DMA-safety.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
