--- a/series.conf
+++ b/series.conf
@@ -56407,6 +56407,7 @@
 	patches.suse/iio-dac-mcp4922-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ti-dac082s085-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ti-dac5571-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-dac-ti-dac7311-Fix-alignment-for-DMA-safety.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
