--- a/series.conf
+++ b/series.conf
@@ -56400,6 +56400,7 @@
 	patches.suse/iio-dac-ad5504-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad5755-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad5761-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-dac-ad5764-Fix-alignment-for-DMA-safety.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
