--- a/series.conf
+++ b/series.conf
@@ -56413,6 +56413,7 @@
 	patches.suse/iio-frequency-adf4350-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-frequency-adf4371-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-gyro-adis16080-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-gyro-adis16130-Fix-alignment-for-DMA-safety.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
