--- a/series.conf
+++ b/series.conf
@@ -56415,6 +56415,7 @@
 	patches.suse/iio-gyro-adis16080-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-gyro-adis16130-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-gyro-adxrs450-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-gyro-fxas210002c-Fix-alignment-for-DMA-safety.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
