--- a/series.conf
+++ b/series.conf
@@ -56404,6 +56404,7 @@
 	patches.suse/iio-dac-ad5791-Fix-alignment-for-DMA-saftey.patch
 	patches.suse/iio-dac-ad7303-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad8801-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-dac-mcp4922-Fix-alignment-for-DMA-safety.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
