--- a/series.conf
+++ b/series.conf
@@ -56367,6 +56367,7 @@
 	patches.suse/drm-exynos-exynos7_drm_decon-free-resources-when-clk.patch
 	patches.suse/drm-amd-display-Enable-building-new-display-engine-w.patch
 	patches.suse/fpga-altera-pr-ip-fix-unsigned-comparison-with-less-.patch
+	patches.suse/misc-rtsx-Fix-an-error-handling-path-in-rtsx_pci_pro.patch
 	patches.suse/iio-core-Fix-IIO_ALIGN-and-rename-as-it-was-not-suff.patch
 	patches.suse/iio-accel-bma220-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-accel-sca3000-Fix-alignment-for-DMA-safety.patch
