--- a/series.conf
+++ b/series.conf
@@ -56427,6 +56427,7 @@
 	patches.suse/iio-proximity-as3935-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-resolver-ad2s1200-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-resolver-ad2s90-Fix-alignment-for-DMA-safety.patch
+	patches.suse/soundwire-bus_type-fix-remove-and-shutdown-support.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
