--- a/series.conf
+++ b/series.conf
@@ -56424,6 +56424,7 @@
 	patches.suse/iio-potentiometer-max5481-Fix-alignment-for-DMA-safe.patch
 	patches.suse/iio-potentiometer-mcp41010-Fix-alignment-for-DMA-saf.patch
 	patches.suse/iio-potentiometer-mcp4131-Fix-alignment-for-DMA-safe.patch
+	patches.suse/iio-proximity-as3935-Fix-alignment-for-DMA-safety.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
