--- a/series.conf
+++ b/series.conf
@@ -56454,6 +56454,7 @@
 	patches.suse/PCI-dwc-Add-unroll-iATU-space-support-to-dw_pcie_dis.patch
 	patches.suse/PCI-dwc-Disable-outbound-windows-only-for-controller.patch
 	patches.suse/PCI-dwc-Deallocate-EPC-memory-on-dw_pcie_ep_init-err.patch
+	patches.suse/PCI-dwc-Always-enable-CDM-check-if-snps-enable-cdm-c.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
