--- a/series.conf
+++ b/series.conf
@@ -56438,6 +56438,7 @@
 	patches.suse/USB-serial-fix-tty-port-initialized-comments.patch
 	patches.suse/usb-typec-ucsi-Acknowledge-the-GET_ERROR_STATUS-comm.patch
 	patches.suse/staging-rtl8192u-Fix-sleep-in-atomic-context-bug-in-.patch
+	patches.suse/USB-Follow-up-to-SPDX-identifiers-addition-remove-no.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
