--- a/series.conf
+++ b/series.conf
@@ -56463,6 +56463,7 @@
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 	patches.suse/memstick-ms_block-Fix-some-incorrect-memory-allocati.patch
 	patches.suse/memstick-ms_block-Fix-a-memory-leak.patch
+	patches.suse/mmc-sdhci-of-at91-fix-set_uhs_signaling-rewriting-of.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
