--- a/series.conf
+++ b/series.conf
@@ -56461,6 +56461,7 @@
 	patches.suse/PCI-tegra194-Fix-Root-Port-interrupt-handling.patch
 	patches.suse/PCI-tegra194-Fix-link-up-retry-sequence.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
+	patches.suse/memstick-ms_block-Fix-some-incorrect-memory-allocati.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
