--- a/series.conf
+++ b/series.conf
@@ -56457,6 +56457,7 @@
 	patches.suse/PCI-dwc-Always-enable-CDM-check-if-snps-enable-cdm-c.patch
 	patches.suse/PCI-qcom-Set-up-rev-2.1.0-PARF_PHY-before-enabling-c.patch
 	patches.suse/PCI-qcom-Power-on-PHY-before-IPQ8074-DBI-register-ac.patch
+	patches.suse/PCI-tegra194-Fix-PM-error-handling-in-tegra_pcie_con.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
