--- a/series.conf
+++ b/series.conf
@@ -56458,6 +56458,7 @@
 	patches.suse/PCI-qcom-Set-up-rev-2.1.0-PARF_PHY-before-enabling-c.patch
 	patches.suse/PCI-qcom-Power-on-PHY-before-IPQ8074-DBI-register-ac.patch
 	patches.suse/PCI-tegra194-Fix-PM-error-handling-in-tegra_pcie_con.patch
+	patches.suse/PCI-tegra194-Fix-Root-Port-interrupt-handling.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
