--- a/series.conf
+++ b/series.conf
@@ -56464,6 +56464,7 @@
 	patches.suse/memstick-ms_block-Fix-some-incorrect-memory-allocati.patch
 	patches.suse/memstick-ms_block-Fix-a-memory-leak.patch
 	patches.suse/mmc-sdhci-of-at91-fix-set_uhs_signaling-rewriting-of.patch
+	patches.suse/mmc-cavium-octeon-Add-of_node_put-when-breaking-out-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
