--- a/series.conf
+++ b/series.conf
@@ -56370,6 +56370,7 @@
 	patches.suse/misc-rtsx-Fix-an-error-handling-path-in-rtsx_pci_pro.patch
 	patches.suse/intel_th-Fix-a-resource-leak-in-an-error-handling-pa.patch
 	patches.suse/intel_th-msu-sink-Potential-dereference-of-null-poin.patch
+	patches.suse/intel_th-msu-Fix-vmalloced-buffers.patch
 	patches.suse/iio-core-Fix-IIO_ALIGN-and-rename-as-it-was-not-suff.patch
 	patches.suse/iio-accel-bma220-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-accel-sca3000-Fix-alignment-for-DMA-safety.patch
