--- a/series.conf
+++ b/series.conf
@@ -56426,6 +56426,7 @@
 	patches.suse/iio-potentiometer-mcp4131-Fix-alignment-for-DMA-safe.patch
 	patches.suse/iio-proximity-as3935-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-resolver-ad2s1200-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-resolver-ad2s90-Fix-alignment-for-DMA-safety.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
