--- a/series.conf
+++ b/series.conf
@@ -56436,6 +56436,7 @@
 	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
 	patches.suse/usb-gadget-udc-amd5536-depends-on-HAS_DMA.patch
 	patches.suse/USB-serial-fix-tty-port-initialized-comments.patch
+	patches.suse/usb-typec-ucsi-Acknowledge-the-GET_ERROR_STATUS-comm.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
