--- a/series.conf
+++ b/series.conf
@@ -56450,6 +56450,7 @@
 	patches.suse/clk-qcom-ipq8074-set-BRANCH_HALT_DELAY-flag-for-UBI-.patch
 	patches.suse/clk-qcom-camcc-sdm845-Fix-topology-around-titan_top-.patch
 	patches.suse/PCI-portdrv-Don-t-disable-AER-reporting-in-get_port_.patch
+	patches.suse/PCI-dwc-Stop-link-on-host_init-errors-and-de-initial.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
