--- a/series.conf
+++ b/series.conf
@@ -13149,6 +13149,7 @@
 	patches.suse/ASoC-codecs-wcd9335-move-gains-from-SX_TLV-to-S8_TLV.patch
 	patches.suse/ASoC-samsung-h1940_uda1380-include-proepr-GPIO-consu.patch
 	patches.suse/ASoC-samsung-change-gpiod_speaker_power-and-rx1950_a.patch
+	patches.suse/ASoC-samsung-change-neo1973_audio-from-a-global-to-s.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
