--- a/series.conf
+++ b/series.conf
@@ -13151,6 +13151,7 @@
 	patches.suse/ASoC-samsung-change-gpiod_speaker_power-and-rx1950_a.patch
 	patches.suse/ASoC-samsung-change-neo1973_audio-from-a-global-to-s.patch
 	patches.suse/ASoC-qcom-Fix-missing-of_node_put-in-asoc_qcom_lpass.patch
+	patches.suse/ASoC-imx-card-Fix-DSD-PDM-mclk-frequency.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
