--- a/series.conf
+++ b/series.conf
@@ -13157,6 +13157,7 @@
 	patches.suse/ASoC-audio-graph-card-Add-of_node_put-in-fail-path.patch
 	patches.suse/ASoC-fsl_asrc-force-cast-the-asrc_format-type.patch
 	patches.suse/ASoC-fsl-asoc-card-force-cast-the-asrc_format-type.patch
+	patches.suse/ASoC-fsl_easrc-use-snd_pcm_format_t-type-for-sample_.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
