--- a/series.conf
+++ b/series.conf
@@ -13158,6 +13158,7 @@
 	patches.suse/ASoC-fsl_asrc-force-cast-the-asrc_format-type.patch
 	patches.suse/ASoC-fsl-asoc-card-force-cast-the-asrc_format-type.patch
 	patches.suse/ASoC-fsl_easrc-use-snd_pcm_format_t-type-for-sample_.patch
+	patches.suse/ASoC-imx-card-use-snd_pcm_format_t-type-for-asrc_for.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
