--- a/series.conf
+++ b/series.conf
@@ -13141,6 +13141,7 @@
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
 	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
 	patches.suse/ASoC-cros_ec_codec-Fix-refcount-leak-in-cros_ec_code.patch
+	patches.suse/ASoC-samsung-Fix-error-handling-in-aries_audio_probe.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
