--- a/series.conf
+++ b/series.conf
@@ -10623,6 +10623,7 @@
 	patches.suse/iwlwifi-eeprom-clean-up-macros.patch
 	patches.suse/iwlwifi-remove-unused-macros.patch
 	patches.suse/iwlwifi-debugfs-remove-useless-double-condition.patch
+	patches.suse/iwlwifi-mvm-Unify-the-scan-iteration-functions.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
