--- a/series.conf
+++ b/series.conf
@@ -10637,6 +10637,7 @@
 	patches.suse/iwlwifi-mvm-add-additional-info-for-boot-info-failur-f2f17ca08d8f.patch
 	patches.suse/iwlwifi-fix-small-doc-mistake-for-iwl_fw_ini_addr_va.patch
 	patches.suse/iwlwifi-make-iwl_txq_dyn_alloc_dma-return-the-txq.patch
+	patches.suse/iwlwifi-remove-command-ID-argument-from-queue-alloca.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
