--- a/series.conf
+++ b/series.conf
@@ -10635,6 +10635,7 @@
 	patches.suse/iwlwifi-mvm-make-iwl_mvm_reconfig_scd-static.patch
 	patches.suse/iwlwifi-mvm-always-remove-the-session-protection-aft.patch
 	patches.suse/iwlwifi-mvm-add-additional-info-for-boot-info-failur-f2f17ca08d8f.patch
+	patches.suse/iwlwifi-fix-small-doc-mistake-for-iwl_fw_ini_addr_va.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
