--- a/series.conf
+++ b/series.conf
@@ -10633,6 +10633,7 @@
 	patches.suse/iwlwifi-mvm-Disable-WiFi-bands-selectively-with-BIOS.patch
 	patches.suse/iwlwifi-mvm-refactor-setting-PPE-thresholds-in-STA_H.patch
 	patches.suse/iwlwifi-mvm-make-iwl_mvm_reconfig_scd-static.patch
+	patches.suse/iwlwifi-mvm-always-remove-the-session-protection-aft.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
