--- a/series.conf
+++ b/series.conf
@@ -10630,6 +10630,7 @@
 	patches.suse/iwlwifi-don-t-dump_stack-when-we-get-an-unexpected-i.patch
 	patches.suse/iwlwifi-mvm-don-t-send-BAID-removal-to-the-FW-during.patch
 	patches.suse/iwlwifi-mvm-add-additional-info-for-boot-info-failur.patch
+	patches.suse/iwlwifi-mvm-Disable-WiFi-bands-selectively-with-BIOS.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
