--- a/series.conf
+++ b/series.conf
@@ -10646,6 +10646,7 @@
 	patches.suse/iwlwifi-api-remove-ttl-field-from-TX-command.patch
 	patches.suse/iwlwifi-mvm-update-BAID-allocation-command-again.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
+	patches.suse/iwlwifi-yoyo-send-hcmd-to-fw-after-dump-collection-c.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
 	patches.suse/mt76-mt7915-fix-injected-MPDU-transmission-to-not-us.patch
