--- a/series.conf
+++ b/series.conf
@@ -10644,6 +10644,7 @@
 	patches.suse/iwlwifi-yoyo-support-dump-policy-for-the-dump-size.patch
 	patches.suse/iwlwifi-support-new-queue-allocation-command.patch
 	patches.suse/iwlwifi-api-remove-ttl-field-from-TX-command.patch
+	patches.suse/iwlwifi-mvm-update-BAID-allocation-command-again.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
