--- a/series.conf
+++ b/series.conf
@@ -10667,6 +10667,7 @@
 	patches.suse/iwlwifi-mvm-add-a-flag-to-reduce-power-command.patch
 	patches.suse/iwlwifi-Configure-FW-debug-preset-via-module-param.patch
 	patches.suse/iwlwifi-mvm-remove-cipher-scheme-support.patch
+	patches.suse/iwlwifi-yoyo-disable-IMR-DRAM-region-if-IMR-is-disab.patch
 	patches.suse/iwlwifi-pcie-fix-SW-error-MSI-X-mapping.patch
 	patches.suse/Revert-ath-add-support-for-special-0x0-regulatory-do.patch
 	patches.suse/ath10k-Fix-error-handling-in-ath10k_setup_msa_resour.patch
