--- a/series.conf
+++ b/series.conf
@@ -10655,6 +10655,7 @@
 	patches.suse/iwlwifi-mvm-rfi-use-kmemdup-to-replace-kzalloc-memcp.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
+	patches.suse/iwlwifi-dbg_ini-Split-memcpy-to-avoid-multi-field-wr.patch
 	patches.suse/mt76-mt7915-fix-injected-MPDU-transmission-to-not-us.patch
 	patches.suse/mt76-mt7615-Fix-assigning-negative-values-to-unsigne.patch
 	patches.suse/ath11k-fix-kernel-panic-during-unload-load-ath11k-mo.patch
