--- a/series.conf
+++ b/series.conf
@@ -10673,6 +10673,7 @@
 	patches.suse/iwlwifi-pcie-fix-SW-error-MSI-X-mapping.patch
 	patches.suse/iwlwifi-use-4k-queue-size-for-Bz-A-step.patch
 	patches.suse/iwlwifi-dbg-in-sync-mode-don-t-call-schedule.patch
+	patches.suse/iwlwifi-dbg-check-trigger-data-before-access.patch
 	patches.suse/Revert-ath-add-support-for-special-0x0-regulatory-do.patch
 	patches.suse/ath10k-Fix-error-handling-in-ath10k_setup_msa_resour.patch
 	patches.suse/mac80211-fix-potential-double-free-on-mesh-join.patch
