--- a/series.conf
+++ b/series.conf
@@ -10695,6 +10695,7 @@
 	patches.suse/bpf-Fix-PTR_TO_BTF_ID-var_off-check.patch
 	patches.suse/bpf-Disallow-negative-offset-in-check_ptr_off_reg.patch
 	patches.suse/bpf-Fix-comment-for-helper-bpf_current_task_under_cg.patch
+	patches.suse/iwlwifi-mvm-Don-t-fail-if-PPAG-isn-t-supported.patch
 	patches.suse/drivers-net-xgene-Fix-regression-in-CRC-stripping.patch
 	patches.suse/netfilter-nf_tables-validate-registers-coming-from-u.patch
 	patches.suse/netfilter-nf_tables-initialize-registers-in-nft_do_c.patch
