--- a/series.conf
+++ b/series.conf
@@ -10671,6 +10671,7 @@
 	patches.suse/iwlwifi-mvm-add-support-for-IMR-based-on-platform.patch
 	patches.suse/iwlwifi-yoyo-dump-IMR-DRAM-only-for-HW-and-FW-error.patch
 	patches.suse/iwlwifi-pcie-fix-SW-error-MSI-X-mapping.patch
+	patches.suse/iwlwifi-use-4k-queue-size-for-Bz-A-step.patch
 	patches.suse/Revert-ath-add-support-for-special-0x0-regulatory-do.patch
 	patches.suse/ath10k-Fix-error-handling-in-ath10k_setup_msa_resour.patch
 	patches.suse/mac80211-fix-potential-double-free-on-mesh-join.patch
